--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "@david.kucsai/react-pdf-table": "^0.1.0",
+    "@react-pdf/renderer": "^1.6.13",
+    "@stripe/react-stripe-js": "^1.3.0",
+    "@stripe/stripe-js": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.9.4",
+    "axios": "^0.21.1",
+    "firebase": "^8.2.1",
+    "i": "^0.3.6",
+    "lodash": "^4.17.20",
+    "npm": "^7.5.6",
     "react": "^17.0.1",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
+    "react-image-file-resizer": "^0.4.0",
+    "react-modal-image": "^2.5.0",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0",
+    "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
